# evm

./: CMakeLists.txt  evm_priv_lin  key  main.c
lab1/: CMakeLists.txt  main.c
lab2/: data.json  main.c  test.py
lab3/: main.c  шпаргалка_assembly_x86  шпаргалка_assembly_x86-64  шпаргалка_assembly_x86-64 -Os
lab5/src/: data 1 ms.txt  data 15 ms.txt  data 33 ms.txt  fpsCheck.cpp  main.cpp  timeCheck.cpp  util.py
lab6/: CMakeLists.txt  cmd  main.cpp  output  output2  output3  test.cpp
lab7/: CMakeLists.txt  data  linuxTime  main.cpp  mainCblas.cpp  mainVect.cpp
lab8/: CMakeLists.txt  main.cpp
lab9/: CMakeLists.txt  main.cpp
